--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   background-image: url('images/eitherWay.png');
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   height: 100vh;
   margin: 0;
